<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Glyphtic</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_upload">Upload</string>
    <string name="action_camera">Camera</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="action_crop">Crop</string>
    <string name="action_rotate_left">Rotate Left</string>
    <string name="action_rotate_right">Rotate Right</string>
    <string name="action_ok">OK</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_close">Close</string>
    <string name="action_continue">Continue</string>
    <string name="action_save">Save to Text</string>
    <string name="action_undo">Undo</string>
    <string name="conversion_message">Converting...</string>

    <string-array name="lang_array">
        <item>English</item>
        <item>Spanish</item>
        <item>French</item>
        <item>Hindi</item>
        <item>Arabic</item>
        <item>Portuguese</item>
        <item>Simplified Chinese</item>
        <item>German</item>
    </string-array>

    <string name="title_activity_start">Start Activity</string>
    <string name="title_activity_image_preprocessor">Image Preprocessor</string>
    <string name="title_activity_conversion">Conversion</string>
    <string name="title_activity_text_preview">Text Preview</string>
    <string name="title_activity_save_to_format">Save to Format</string>
    <string name="title_activity_help">Help</string>

</resources>
