<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.ocrapp.ImagePreprocessor" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/rotate_left"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_rotate_left"
        android:icon="@android:drawable/ic_menu_rotate">
    </item>
    <item
        android:id="@+id/rotate_right"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_rotate_right"
        android:icon="@android:drawable/ic_menu_rotate">
    </item>
    <item
        android:id="@+id/crop"
        android:icon="@android:drawable/ic_menu_crop"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/action_crop"/>
    <item
        android:id="@+id/OK"
        android:showAsAction="ifRoom"
        android:title="OK"
        android:icon="@android:drawable/ic_menu_send"/>
    <item
        android:id="@+id/undo"
        android:showAsAction="ifRoom"
        android:title="Undo"
        android:icon="@android:drawable/ic_menu_revert"/>
    <item
        android:id="@+id/cancel"
        android:showAsAction="never"
        android:title="Cancel"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"/>

</menu>