<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical|center_horizontal|fill_vertical"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ocrapp.StartActivity" >

    <Button
        android:id="@+id/helpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginRight="22dp"
        android:layout_marginEnd="22dp"
        android:layout_marginTop="11dp"
        android:background="@drawable/round_button"
        android:minHeight="35dp"
        android:minWidth="35dp"
        android:text="@string/action_help"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textview1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginTop="9dp"
        android:text="@string/app_name"
        android:textSize="40sp" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="130dp"
        android:minWidth="130dp"
        android:src="@drawable/logo" 
        android:contentDescription="@string/title_activity_start"/>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:entries="@array/lang_array"
        android:padding="10dp" />

    <Button
        android:id="@+id/cameraButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:background="#137DCC"
        android:text="@string/action_camera"
        android:textColor="@android:color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        android:width="200dp" />

    <Button
        android:id="@+id/uploadButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="54dp"
        android:background="#137DCC"
        android:text="@string/action_upload"
        android:textColor="@android:color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        android:width="200dp" />

</LinearLayout>